Update week date in weekly review document

--- a/weekly/2026-01-05.md
+++ b/weekly/2026-01-05.md
@@ -1,6 +1,6 @@
 # Weekly Cyber Intelligence & Defensive Design Review
 
-**Week of:** YYYY-MM-DD  
+**Week of:** 2026-01-05 
 **Author:** Andre Powell  
 **Focus Environment:** Enterprise | Mission / Isolated | Cloud | Hybrid
 
