Revise weekly report to focus on cyber intelligence

--- a/weekly/2026-01-05.md
+++ b/weekly/2026-01-05.md
@@ -1,117 +1,117 @@
-# Covenant Health Data Breach (Qilin Ransomware Claim)
+# Weekly Cyber Intelligence & Defensive Design Review
 
-## Incident Overview
-
-**Organization:** Covenant Health (U.S. healthcare provider)  
-**Sector:** Healthcare  
-**Timeframe:** May 18–26, 2025 (reported)  
-**Impact:** ~478,000 individuals affected  
-**Threat Actor (Claimed):** Qilin ransomware group  
-
-Covenant Health disclosed a cyber incident that resulted in unauthorized access to internal systems and the exposure of sensitive patient information. The incident caused operational disruption at multiple hospitals and required continuity-of-care measures such as paper-based workflows.
+**Week of (Monday start):** 2026-01-05  
+**Author:** Andre Powell  
+**Focus Environment:** Enterprise | Mission / Isolated
 
 ---
 
-## What Happened (Publicly Known)
+## 1. High-Impact Incident Selection
 
-### Initial Access
-Public reporting did **not disclose the specific initial access vector**. No confirmed exploitation of a specific CVE, phishing campaign, or credential compromise was publicly identified at the time of disclosure.
+**Incident Name:** Covenant Health data breach (Qilin ransomware claim)  
+**Category:** Ransomware | Healthcare | Data Breach  
 
-### Internal Access & Data Exposure
-Attackers maintained access to Covenant Health systems for several days. During this window, sensitive patient data was accessed and exfiltrated, including:
-
-- Names and addresses  
-- Dates of birth  
-- Medical record numbers  
-- Insurance information  
-- Social Security numbers (for some individuals)  
-- Treatment and diagnosis information  
-
-### Operational Impact
-- Increased patient wait times
-- Manual, paper-based lab and administrative processes
-- IT system disruptions affecting hospital operations
-
-Victims were notified and offered credit monitoring services.
+**Why This Matters (1–2 sentences):**  
+A regional U.S. healthcare operator reported sensitive patient data exposure affecting **478,188 people**, with operational disruption at multiple hospitals—showing how a single intrusion can create both **patient safety/continuity** impacts and **high-cost identity risk** at scale. :contentReference[oaicite:0]{index=0}
 
 ---
 
-## Why This Incident Matters
+## 2. Incident Decomposition
 
-This incident highlights several recurring realities in U.S. healthcare cyber risk:
-
-- **Patient data systems remain high-value targets**
-- **Operational disruption matters as much as data theft**
-- **Multi-day dwell time dramatically increases impact**
-- **Lack of public technical detail is common**, requiring defenders to plan for uncertainty
-
-The breach demonstrates that even when attackers do not deploy destructive malware, **loss of availability and trust** can still have serious patient-care consequences.
+**Summary (max 3 sentences):**
+- **Initial Access:** Public reporting confirms a network breach occurred, but the **initial entry vector was not disclosed** in the referenced reporting. :contentReference[oaicite:1]{index=1}
+- **Propagation / Lateral Movement:** Not publicly described; however, attackers maintained access to IT systems for roughly **May 18–May 26, 2025** (dwell time), implying internal access sufficient to locate and extract regulated data. :contentReference[oaicite:2]{index=2}
+- **Impact:** Disruption to hospital operations (e.g., increased wait times, paper-based lab orders) and exposure of PHI/PII including SSNs, insurance, and treatment information; victims were offered credit monitoring. :contentReference[oaicite:3]{index=3}
 
 ---
 
-## MITRE ATT&CK Mapping (Based on Available Information)
+## 3. MITRE ATT&CK Technique Mapping (Spine Only)
 
-> Note: Technique mapping is constrained by limited public technical disclosure.
+> Note: Some technique selections remain **TBD** because the initial vector and exact exfiltration mechanism were **not publicly specified** in the source reporting.
 
-| ATT&CK Tactic | Technique | Rationale |
-|---------------|-----------|-----------|
-| Initial Access | TBD | Entry vector not publicly disclosed |
-| Collection | TBD | Access to large volumes of PHI/PII |
-| Exfiltration | TBD | Confirmed data theft |
-| Impact | Service Disruption (Non-destructive) | Operational delays and manual workflows |
+| ATT&CK Tactic | Technique ID | Technique Name | Purpose |
+|--------------|--------------|----------------|---------|
+| Initial Access | TBD | Not publicly disclosed | Entry vector not reported |
+| Collection | TBD | Not publicly disclosed | Access to patient PII/PHI for theft |
+| Exfiltration | TBD | Not publicly disclosed | Data theft of names, addresses, DOB, MRNs, SSNs, insurance, and treatment info |
+| Impact | TBD | Not publicly disclosed | Operational disruption at hospitals; ransomware actor claim |
 
-This uncertainty itself is a lesson: **defensive design must assume incomplete attacker telemetry**.
-
----
-
-## Defensive Control Themes
-
-### Prevention
-- Strong segmentation between general IT systems and PHI repositories
-- Least-privilege access to patient data systems
-- Hardened remote access with MFA and conditional access
-- Reduced external attack surface
-
-### Detection
-- Monitoring for bulk data access to PHI systems
-- Authentication anomaly detection
-- Endpoint and server telemetry for unusual access patterns
-- Centralized logging with healthcare-specific alerting
-
-### Containment
-- Ability to rapidly isolate affected systems
-- Predefined ransomware and breach containment playbooks
-- Separation of clinical operations from general IT domains
-
-### Recovery
-- Tested clinical downtime procedures
-- Backup validation for critical systems
-- Patient communication and regulatory response planning
+Source basis for the above: breach timeline, data types, and operational impact were reported; technical mechanics were not. :contentReference[oaicite:4]{index=4}
 
 ---
 
-## Design Lessons
+## 4. Control Analysis (Prevent / Detect / Contain / Recover)
 
-1. **Continuity is a security control**  
-   Clinical downtime procedures directly reduce patient harm during cyber incidents.
+| Technique (TBD where undisclosed) | Prevent | Detect | Contain | Recover |
+|---|---|---|---|---|
+| Initial access (TBD) | External attack surface hardening; patch/vuln mgmt; MFA for remote access; email/web protections (as applicable) | Auth + endpoint telemetry; anomalous login alerts; web/email security alerts | Rapid account disablement; isolate affected endpoints/segments | IR playbooks + restore clean access paths |
+| Collection / staging (TBD) | Least privilege to PHI repositories; strong app/service account controls | Unusual database access; bulk record reads; privileged access monitoring | Segment PHI systems; restrict east-west access | Validate integrity of systems holding PHI |
+| Exfiltration (TBD) | Egress filtering; allow-list outbound; DLP (where feasible) | Netflow/proxy logs; unusual outbound volume; uncommon destinations | Quarantine segments; block destinations; rotate creds/keys | Legal/regulatory response; monitoring for misuse |
+| Operational impact (TBD) | Resilience engineering; segmentation between IT/clinical workflows | SIEM correlation on service outages + security alerts | Clinical downtime procedures; isolate core clinical services from general IT | Tested backups + rebuild; tabletop for “paper ops” continuity |
 
-2. **Dwell time matters more than attribution**  
-   Multi-day access enables large-scale data exposure even without destructive payloads.
-
-3. **Incomplete disclosure is the norm**  
-   Systems must be designed to withstand attacks even when defenders lack perfect visibility.
-
-4. **Healthcare impact is multidimensional**  
-   Data theft, operational disruption, regulatory exposure, and patient trust are all part of the blast radius.
+Operational impact and scope basis: disruptions described for specific hospitals and broad sensitive-data exposure. :contentReference[oaicite:5]{index=5}
 
 ---
 
-## Key Takeaway
+## 5. Derived Design Requirements
 
-> In healthcare environments, cyber incidents are safety incidents. Defensive architecture must prioritize segmentation, rapid detection, and continuity of care as first-order security objectives.
+### DR-1
+**The system SHALL:**  
+Provide **segmented, least-privileged access** to patient-data systems (PHI/PII), with privileged access restricted to dedicated administrative paths and accounts.
+
+**Rationale:**  
+Attackers accessed and stole sensitive patient identifiers and treatment/insurance information at scale—indicating internal access to sensitive repositories that should be tightly segmented and monitored. :contentReference[oaicite:6]{index=6}
+
+**Verification Method:**  
+Access review + network path validation; attempt “non-privileged workstation → PHI system” access in a test environment; ensure denied-by-default and logged.
 
 ---
 
-## Related Weekly Entry
+### DR-2
+**The system SHALL:**  
+Maintain and exercise **clinical downtime procedures** and ensure critical workflows can operate safely under degraded IT conditions (e.g., paper order processing, limited-lab operations).
 
-- **Week of 2026-01-05:** Covenant Health breach — Weekly Cyber Intelligence & Defensive Design Review
+**Rationale:**  
+Public reporting described increased wait times and paper-based lab orders following the incident—continuity is a control, not just an operational concern. :contentReference[oaicite:7]{index=7}
+
+**Verification Method:**  
+Quarterly tabletop + annual functional exercise simulating ransomware/data-breach disruption; validate time-to-restore for critical services.
+
+---
+
+### DR-3 (Optional)
+**The system SHALL:**  
+Detect and respond to suspected breach activity within a defined window (e.g., **<24 hours**) using centralized logging and alerting for authentication anomalies and bulk data access.
+
+**Rationale:**  
+Reported access window (May 18–May 26) indicates multi-day unauthorized access; shortening time-to-detect reduces data theft and operational impact. :contentReference[oaicite:8]{index=8}
+
+**Verification Method:**  
+Detection engineering test cases + purple-team scenarios; measure alert-to-triage time; document containment actions.
+
+---
+
+## 6. Environment Gap Assessment
+
+| Control Area | Status | Notes |
+|-------------|--------|-------|
+| Patch discipline | Unknown | Initial entry vector not disclosed in reporting |
+| Segmentation | Unknown | Recommend validating PHI segmentation boundaries |
+| Update provenance | Unknown | Not indicated as supply-chain/update issue |
+| Credential hygiene | Unknown | Not specified; assume credential hardening remains critical |
+| Detection speed | Risk | Multi-day access window suggests need for faster detection/containment goals :contentReference[oaicite:9]{index=9} |
+
+---
+
+## 7. Leadership Takeaway (One Sentence)
+
+> This incident reinforces that healthcare risk is both **data exposure** and **service disruption**, and that segmentation + rapid detection materially reduce patient-impact blast radius. :contentReference[oaicite:10]{index=10}
+
+---
+
+## 8. Carry-Forward Items
+
+- [ ] Identify top PHI/PII systems and validate least-privilege + segmentation boundaries
+- [ ] Confirm centralized logging coverage for auth, endpoint, and PHI repositories
+- [ ] Define and test a “dwell time” objective (e.g., detect/contain within 24 hours)
+- [ ] Run a downtime tabletop that includes lab/paper-order workflows
