Update weekly report with sources and notes
Added sources and notes related to Covenant Health breach analysis.

--- a/weekly/2026-01-05.md
+++ b/weekly/2026-01-05.md
@@ -3,6 +3,34 @@
 **Week of (Monday start):** 2026-01-05  
 **Author:** Andre Powell  
 **Focus Environment:** Enterprise | Mission / Isolated
+---
+
+## Sources Used This Week
+
+> Sources listed below directly informed this week’s analysis.  
+> Technical details reflect publicly available information at time of writing.
+
+### Primary News / Disclosure
+- **The Record** — Covenant Health breach reporting  
+  https://therecord.media/covenant-health-breach-qilin
+
+### Government / Authoritative
+- **CISA – Healthcare Sector Cybersecurity Guidance**  
+  https://www.cisa.gov/healthcare
+
+- **CISA Known Exploited Vulnerabilities (KEV) Catalog**  
+  https://www.cisa.gov/known-exploited-vulnerabilities-catalog  
+  *(Reviewed for relevant active exploitation during the incident timeframe; no specific CVE publicly linked to this breach at time of writing.)*
+
+### Context / Tradecraft Reference
+- **SANS Internet Storm Center (ISC)** — Ransomware and intrusion trend monitoring  
+  https://isc.sans.edu/
+
+**Notes:**  
+- Covenant Health did not publicly disclose the initial access vector or confirm system-wide encryption.  
+- ATT&CK technique mapping reflects observed effects (unauthorized access, data exposure, operational disruption), not assumed tooling.  
+- Initial access hypotheses remain constrained to common healthcare-sector ransomware tradecraft pending further disclosure.
+
 
 ---
 
